wip
Improved processing of slash commands.